force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/Custom_Conversion_Upgrade_Source__c.object-meta.xml
<CustomObject>
    <description>SOX object - This object is used to store the products for conversion according to conditions.</description>
    <label>Custom Conversion Upgrade Source</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Conversion Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Conversion Upgrade Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>