force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>On Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>