force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the new version of product reference.</description>
    <label>New Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Conversion Upgrade Sources (New Product)</relationshipLabel>
    <relationshipName>Custom_Conversion_Upgrade_Sources2</relationshipName>
    <type>Lookup</type>
</CustomField>