force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/Old_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has the reference to older version of product.</description>
    <label>Old Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Conversion Upgrade Sources (Old Product)</relationshipLabel>
    <relationshipName>Custom_Conversion_Upgrade_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>