force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/Product_Upgrade_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Upgrade_Type__c</fullName>
    <label>Product Upgrade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>SaaS Bundle</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Add-On Node</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
                <isActive>false</isActive>
                <label>Aspen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>