force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/Saas_SKU__c.field-meta.xml
<CustomField>
    <fullName>Saas_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saas SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Conversion Upgrade Sources</relationshipLabel>
    <relationshipName>Custom_Conversion_Upgrade_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>