force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/fields/Saas_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>Saas_SKU_Name__c</fullName>
    <label>Saas SKU Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>