force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>Payment_Option__c</columns>
    <columns>Support_Type__c</columns>
    <columns>License_Type__c</columns>
    <columns>Saas_SKU__c</columns>
    <columns>Old_Product__c</columns>
    <columns>New_Product__c</columns>
    <columns>Saas_SKU_Name__c</columns>
    <columns>Product_Upgrade_Type__c</columns>
    <columns>Support_Tier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>