force-app/main/default/objects/Custom_Conversion_Upgrade_Source__c/listViews/SaaS_SKUs.listView-meta.xml
<ListView>
    <fullName>SaaS_SKUs</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>License_Type__c</columns>
    <columns>Support_Type__c</columns>
    <columns>Payment_Option__c</columns>
    <columns>Saas_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SaaS SKUs</label>
</ListView>